Sem1-NeuralNetworks/HW3/calculations_that_are_done_with_numpy.txt
Microsoft Windows [Version 10.0.22000.1098]
(c) Microsoft Corporation. All rights reserved.

C:\Users\smerf>python
Python 3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import numpy as np
>>> w1 = np.array([sqrt(2), 0])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sqrt' is not defined
>>> w1 = np.array([np.sqrt(2), 0])
>>> w1
array([1.41421356, 0.        ])
>>> w2 = np.array([0, np.sqrt(2)])
>>> w2
array([0.        , 1.41421356])
>>> p1 = np.array([1, -1])
>>> p2 = np.array([1, 1])
>>> p3 = np.array([-1, -1])
>>> from scipy.spatial import distance
>>> dis = distance.euclidean
>>> dis
<function euclidean at 0x0000022A1E9D4040>
>>> dis(w1,p1)
1.082392200292394
>>> dis(w2,p1)
2.613125929752753
>>> w1+(0.5*(p1-w1))
array([ 1.20710678, -0.5       ])
>>> w1 = w1+(0.5*(p1-w1))
>>> dis(p2,w1)
1.5142302396972043
>>> dis(p2,w2)
1.082392200292394
>>> w2+(0.5*(p2-w2))
array([0.5       , 1.20710678])
>>> w2=w2+(0.5*(p2-w2))
>>> w2
array([0.5       , 1.20710678])
>>> dis(p3,w1)
2.2630334384537143
>>> dis(p3,w2)
2.668580211190895
>>> w1+(0.5*(p3-w1))
array([ 0.10355339, -0.75      ])
>>> w1=w1+(0.5*(p3-w1))
>>> w1
array([ 0.10355339, -0.75      ])
>>> def phi(x):
...
KeyboardInterrupt
>>> phi
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'phi' is not defined
>>> def phi(x,t):
... return np.exp(-(dis(x,t)**2))
  File "<stdin>", line 2
    return np.exp(-(dis(x,t)**2))
    ^
IndentationError: expected an indented block after function definition on line 1
>>> def phi(x,t):
...     return np.exp(-(dis(x,t)**2))
...
KeyboardInterrupt
>>> phi
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'phi' is not defined
>>> def phi(x,t):
...     return np.exp(-(dis(x,t)**2))
...
>>> phi
<function phi at 0x0000022A1E9D71C0>
>>> i1 = np.array([1,1])
>>> i2 = np.array([0,1])
>>> i3 = np.array([0,0])
>>> i4 = np.array([1,0])
>>> t1 = np.array([1,1])
>>> t2 = np.array([0,0])
>>> phi(i1,t1)
1.0
>>> phi(i1,t2)
0.13533528323661262
>>> t1 = np.array([0.9,0.9])
>>> phi(i1,t1)
0.9801986733067554
>>> phi(i2,t1)
0.4404316545059992
>>> phi(i3,t1)
0.1978986990836147
>>> phi(i4,t1)
0.4404316545059992
>>> phi(i1,t2)
0.13533528323661262
>>> t2 = np.array([0.1,0.1])
>>> phi(i1,t2)
0.1978986990836147
>>> phi(i2,t2)
0.4404316545059992
>>> phi(i3,t2)
0.9801986733067553
>>> phi(i4,t2)
0.4404316545059992
>>> -0.54*0.98+2.81*0.19
0.0047000000000000375
>>> -0.54*0.44+2.81*0.44
0.9987999999999999
>>> -0.54*0.19+2.81*0.98
2.6512000000000002
>>> -3.44*0.98+-3.44*0.19+4.03
0.0052000000000003155
>>> -3.44*0.44+-3.44*0.44+4.03
1.0028000000000001
>>> -3.44*0.19+-3.44*0.98+4.03
0.0052000000000003155
>>> quit()

C:\Users\smerf>
